Change to named export

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "An ESBuild Plugin to Exclude Vendor From Source Map",
     "main": "./src/index.js",
-    "type": "module",
+    "type": "commonjs",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/andidev/esbuild-plugin-exclude-vendor-from-source-map.git"
